# OktaMCP2

okta-mcp-server-main/: .gitignore  CHANGELOG.md  CLAUDE.md  HANDOVER.md  README.md  changes.md  pyproject.toml  run-server.sh
okta-mcp-server-main/docs/plans/: 2026-02-05-complete-okta-api.md  2026-02-14-code-review-fixes.md  2026-02-15-utility-test-coverage.md  2026-02-17-full-code-review-design.md  2026-02-17-full-review-fixes-design.md  2026-02-19-documentation-restructure-design.md  2026-02-19-documentation-restructure-plan.md  2026-02-19-phase2-operational-api-design.md  2026-02-19-phase2-operational-api-plan.md  2026-02-19-phase3-admin-gaps-design.md  2026-02-19-phase3-admin-gaps-plan.md
okta-mcp-server-main/tests/: conftest.py  test_api_tokens.py  test_applications.py  test_auth_manager.py  test_auth_servers.py  test_authenticators.py  test_behaviors.py  test_brands.py  test_client.py  test_custom_domains.py  test_device_assurance.py  test_devices.py  test_email_domains.py  test_event_hooks.py  test_factors.py  test_features.py  test_group_rules.py  test_groups.py  test_identity_providers.py  test_inline_hooks.py  test_linked_objects.py  test_network_zones.py  test_org_settings.py  test_pagination.py  test_pagination_utils.py  test_policies.py  test_profile_mappings.py  test_rate_limits.py  test_response.py  test_retry.py  test_roles.py  test_schemas.py  test_server.py  test_sessions.py  test_system_logs.py  test_threat_insight.py  test_trusted_origins.py  test_user_types.py  test_users.py  test_validators.py
(+62 files in other folders)
