[project]
name = "okta-mcp-server"
version = "0.1.0"
description = "Okta MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "mcp[cli]>=1.9.2",
    "okta>=2.9.13",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "ruff>=0.11.13",
    "keyring>=25.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/okta_mcp_server"]

[project.scripts]
okta-mcp-server = "okta_mcp_server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
